--- a/css/style.css
+++ b/css/style.css
@@ -117,24 +117,26 @@ li {
 ---------------------------------*/
 .split {
   display: flex;
-  align-items: center;
   flex-wrap: wrap;
   justify-content: space-between;
+  z-index: 0;
 }
 
 .split-body {
   width: 50%;
   padding-right: 3%;
   padding-left: 10%;
+  z-index: 2;
 }
 
 .split-img {
-  width: 50%;
+  width: 100%;
   height: 95vh;
   background-image: url(../img/mv.jpg);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
+  z-index: 1;
 }
 
 .split-title {
