--- a/css/style.css
+++ b/css/style.css
@@ -118,15 +118,24 @@ li {
 .split {
   display: flex;
   flex-wrap: wrap;
+  width: 100%;
   justify-content: space-between;
+  position: relative;
   z-index: 0;
 }
 
 .split-body {
   width: 50%;
+  position: absolute;
+  top: 50%;
   padding-right: 3%;
   padding-left: 10%;
   z-index: 2;
+  opacity: 0.2;
+}
+
+.split-body:hover{
+  opacity: 0.7;
 }
 
 .split-img {
