--- a/css/slider.css
+++ b/css/slider.css
@@ -1,26 +1,59 @@
-	
-	
-.autoplay-slider{
-    display: flex;
-    height: 100%;
-    width: 100%;
-    animation: 20s linear infinite sliderAnimation;
+.slider{
+	width: 100%;
+	height: 90vh;
+	margin:0 auto;
+	position:relative;
+}
+.slider ul{
+	margin:0;
+	padding:0;
+	list-style:none;
+}
+.slider ul li{
+	width:100%;
+	height:90vh;
+	position:absolute;
+	top:0;
+	left:0;
+	animation-iteration-count:infinite;
+	animation-duration:24s;
 }
 
-.slide{
-    background: #3486eb;
-    margin: 20px;
-    position: relative;
-} 
-
-.slideimg{
-    height: 95vh;
-    width: 100%;
+.sliderimage{
+	width: 100%;
+	height: 96vh;
 }
 
-	
-@keyframes sliderAnimation {
-    100% {
-      transform: translateX(-50%);
-    }
+.slider ul li:nth-child(1){
+	animation-name:slider;
+	animation-delay:-3s;
+}
+.slider ul li:nth-child(2){
+	animation-name:slider;
+	animation-delay:5s;
+	opacity:0;
+}
+.slider ul li:nth-child(3){
+	animation-name:slider;
+	animation-delay:13s;
+	opacity:0;
+}
+
+
+@keyframes slider{
+	0%{
+		opacity:0;
+	}
+	20.83%{
+		opacity:1;
+	}
+	33.33%{
+		opacity:1;
+	}
+	45.83%{
+		opacity:0;
+	}
+	100%{
+		opacity:0;
+	}	
 }
