--- a/css/style.css
+++ b/css/style.css
@@ -68,8 +68,10 @@ li {
 .header {
   position: fixed;
   top: 0;
-  z-index: 1;
   width: 100%;
+  background-color:#f3f3f3;
+  box-shadow: 0px 1px 0px gray;
+  z-index: 1;
 }
 
 .header-inner {
@@ -136,16 +138,6 @@ li {
 
 .split-body:hover{
   opacity: 0.7;
-}
-
-.split-img {
-  width: 100%;
-  height: 95vh;
-  background-image: url(../img/mv.jpg);
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-  z-index: 1;
 }
 
 .split-title {
