--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,8 @@ li {
  レイアウト
 ---------------------------------*/
 .section {
+  position: relative;
+  top: 66px;
   padding: 80px 0;
 }
 
@@ -69,9 +71,9 @@ li {
   position: fixed;
   top: 0;
   width: 100%;
-  background-color:#f3f3f3;
-  box-shadow: 0px 1px 0px gray;
-  z-index: 1;
+  background-color:#f4f4f4;
+  box-shadow: 0px 1px 0px #cbcbcb;
+  z-index: 2;
 }
 
 .header-inner {
@@ -86,7 +88,7 @@ li {
   font-weight: bold;
   line-height: 1.2;
   margin-right: 20px;
-  letter-spacing: .05em;
+  letter-spacing: 0.05em;
 }
 
 .header-logo a {
@@ -106,12 +108,12 @@ li {
   font-size: 13px;
   font-weight: bold;
   padding: 5px 0;
-  letter-spacing: .05em;
+  letter-spacing: 0.05em;
   color: #333;
 }
 
 .header-nav-item a:hover {
-  opacity: .8;
+  opacity: 0.8;
 }
 
 /*--------------------------------
@@ -123,16 +125,18 @@ li {
   width: 100%;
   justify-content: space-between;
   position: relative;
-  z-index: 0;
+  top: 66px;
 }
 
 .split-body {
   width: 50%;
-  position: absolute;
   top: 50%;
+  left: 5%;
+  position: absolute;
+  border-radius: 10px;
   padding-right: 3%;
-  padding-left: 10%;
-  z-index: 2;
+  padding-left: 5%;
+  z-index: 1;
   opacity: 0.2;
 }
 
