--- a/css/darkmode.css
+++ b/css/darkmode.css
@@ -1,72 +1,98 @@
-.switchArea {
-    line-height    : 20px;
-    height: 20px;
-    letter-spacing : 0;
-    text-align     : center;
-    font-size      : 15px;
-    position       : relative;
-    border-radius: 10px;
-    margin         : auto;
-    width          : 100px; 
-    background     : #fff;
-  }
-  
-  .switchArea input[type="checkbox"] {
-    display        : none;
-  }
- 
-  .switchArea label {
-    display        : block;
-    box-sizing     : border-box;
-    height         : 25px;
-    border         : 2px solid #999999;
-    border-radius  : 10px;
-  }
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  outline: 0;
+  box-sizing: border-box;
+  user-select: none;
+}
 
-  .switchArea input[type="checkbox"]:checked +label {
-    border-color   : #78bd78;
-  }
-  
-  .switchArea label span:after{
-    content        : "Light";
-    padding        : 0 0 0 36px;
-    color          : #999999;
-  }
-  
+html {
+  transition: color .5s, filter .5s;
+}
 
-  .switchArea  input[type="checkbox"]:checked + label span:after{
-    content        : "Dark";
-    padding        : 0 36px 0 0;
-    color          : #78bd78;
-  }
-  
+:root[theme="dark"] {
+  filter: invert(100%) hue-rotate(180deg);
+}
 
-  .switchArea #swImg {
-    position       : absolute;
-    width          : 5px;
-    height         : 5px;
-    background     : #999999;
-    top            : 4px;
-    left           : 4px;
-    border-radius  : 26px;
-    transition     : .2s;
-  }
+:root[theme="dark"] img {
+  filter: invert(100%) hue-rotate(180deg);
+}
 
-  .switchArea input[type="checkbox"]:checked ~ #swImg {
-    transform      : translateX(90px);
-    background     : #78bd78;
-  }
 
-  @media (prefers-color-scheme: light) {
-    body {
-      background-color: #fff;
-      color: #000;
-    }
-  }
-  
-  @media (prefers-color-scheme: dark) {
-    body {
-      background-color: #000;
-      color: #fff;
-    }
-  }
+:root {
+  --primary: #17b87c;
+  --body: #f1f3f6;
+  --switch: #f1f3f6;
+  --checkbox: #000000;
+  /* All colors */
+}
+
+:root[data-theme="dark"] {
+  --primary: #17b87c;
+  --body: #000000;
+  --switch: #000000;
+  --checkbox: #f1f3f6;
+  /* All colors in dark */
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background-color: var(--body);
+}
+
+label {
+  position: relative;
+  display: flex;
+  width: 10vh;
+  height: 20px;
+  bottom: 25px;
+  background-color: var(--checkbox);
+  border-radius: 30rem;
+  overflow: hidden;
+  cursor: pointer;
+  border: solid;
+  border-radius: 10px;
+}
+
+label:after {
+  position: absolute;
+  left: 8px;
+  content: "";
+  width: 30px;
+  height: 15px;
+  background-color: var(--switch);
+  border-radius: 40%;
+
+  /* Choose the result */
+
+  /*transition: all 0.4s ease;*/ /* Classic */
+  transition: all 0.4s cubic-bezier(0.25, 0.1, 0.25, 1.65); /* Final animation */
+  /*transition: transform 0.4s cubic-bezier(0.25, 0.1, 0.25, 1.65);*/ /* Enter from outside */
+}
+
+label:active::after {
+  width: 20px;
+}
+
+input[type="checkbox"] {
+  width: 10vh;
+  height: 20px;
+  visibility: hidden;
+}
+
+input[type="checkbox"]:checked + label:after {
+  left: calc(100% - 10px);
+  transform: translateX(-100%);
+}
+
+.toggle-dark-mode {
+  width: 10vh;
+  height: 20px;
+}
+
