--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ body {
   line-height: 1.8;
   letter-spacing: .8px;
   color: #333;
+  flex-direction: column;
 }
 
 a {
@@ -32,15 +33,16 @@ img {
 ---------------------------------*/
 .section {
   position: relative;
-  top: 66px;
-  padding: 80px 10%;
+  top: 10%;
+  bottom: 10%;
+  padding: 5% 10%;
   background-color:#ffffff;
 }
 
 .inner {
   /* max-width: 1340px; */
   margin: 0 auto;
-  padding: 0 40px;
+  padding: 0 10%;
 }
 
 /*--------------------------------
@@ -77,14 +79,14 @@ img {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 20px 30px;
+  padding: 2% 5%;
 }
 
 .header-logo {
   font-size: 20px;
   font-weight: bold;
   line-height: 1.2;
-  margin-right: 20px;
+  margin-right: 10%;
   letter-spacing: 0.05em;
 }
 
@@ -99,7 +101,7 @@ img {
 }
 
 .header-nav-item:not(:last-child) {
-  margin-right: 20px;
+  margin-right: 5%;
 }
 
 .header-nav-item a {
@@ -118,12 +120,14 @@ img {
  スプリットスクリーン
 ---------------------------------*/
 .split {
+  width: 100%;
+  height: 80vh;
   display: flex;
   flex-wrap: wrap;
   padding: 0% 10%;
   justify-content: space-between;
   position: relative;
-  top: 66px;
+  top: 10%;
   background-color:#ffffff;
   
 }
@@ -150,7 +154,7 @@ img {
   font-size: 42px;
   font-weight: bold;
   line-height: 1.2;
-  margin-bottom: 20px;
+  margin-bottom: 2%;
   letter-spacing: .05em;
 }
 
@@ -230,18 +234,18 @@ img {
  Contact
 ---------------------------------*/
 .contact-item:not(:last-child) {
-  margin-right: 10px;
+  margin-right: 5%;
 }
 
 .contact-text {
-  margin-top: 10px;
+  margin-top: 10%;
 }
 /*--------------------------------
  ページトップ
 ---------------------------------*/
 .page-top {
   font-weight: bold;
-  padding: 10px;
+  padding: 1%;
   cursor: pointer;
   text-align: center;
   background-color: #f3f3f3;
@@ -268,28 +272,27 @@ img {
  下層：Worksページ
 ---------------------------------*/
 .article {
-  padding: 80px 0;
+  padding: 5% 0;
 }
 
 .article-inner {
-  max-width: 1040px;
-  margin: 0 auto;
-  padding: 0 20px;
+  margin: 0 10%;
+  padding: 0 10%;
 }
 
 .article-title {
-  margin-bottom: 20px;
+  margin-top: 10%;
+  margin-bottom: 10%;
   text-align: center;
 }
 
 .article-img {
-  margin-bottom: 20px;
+  margin-bottom: 10%;
 }
 
 .article-body {
-  max-width: 720px;
   margin: 0 auto;
-  margin-bottom: 80px;
+  margin-bottom: 10%;
 }
 
 .article-info-title {
@@ -297,11 +300,11 @@ img {
 }
 
 .article-body img {
-  margin-bottom: 30px;
+  margin-bottom: 10%;
 }
 
 .article-body p {
-  margin-bottom: 30px;
+  margin-bottom: 10%;
 }
 
 .home-link {
@@ -327,21 +330,20 @@ img {
   /* 見出し */
   .title {
     font-size: 26px;
-    margin-bottom: 20px;
   }
 
   /* レイアウト */
   .section {
-    padding: 60px 0;
+    padding: 20% 0;
   }
 
   .inner {
-    padding: 0 20px;
+    padding: 0 30%;
   }
 
   /* ヘッダー */
   .header-inner {
-    padding: 20px;
+    padding: 2% 5%;
   }
 
   .header-logo {
@@ -349,7 +351,7 @@ img {
   }
 
   .header-nav-item:not(:last-child) {
-    margin-right: 10px;
+    margin-right: 5%;
   }
 
   .header-nav-item a {
@@ -369,9 +371,8 @@ img {
 
   .split-img {
     width: 100%;
-    height: 67vh;
-    margin-bottom: 20px;
-    background-image: url(../img/sp_mv.jpg);
+    height: 80%;
+    margin-bottom: 10%;
   }
 
   .split-title {
@@ -389,8 +390,8 @@ img {
 
   .works-item {
     flex: 0 0 48%;
-    margin-right: 0;
-    margin-bottom: 30px;
+    margin-right: 10%;
+    margin-bottom: 10%;
   }
 
   /* Skill */
@@ -401,7 +402,7 @@ img {
 
   .skill-item {
     width: 100%;
-    margin-bottom: 35px;
+    margin-bottom: 10%;
   }
 
   .skill-item:last-child {
@@ -410,6 +411,6 @@ img {
 
   /* フッター */
   .footer {
-    padding: 20px;
+    padding: 5%;
   }
 }
