--- a/css/slider.css
+++ b/css/slider.css
@@ -1,20 +1,18 @@
 .slider{
-	width: 100%;
-	height: 90vh;
+	width: 80%;
+	height: 80%;
 	margin:0 auto;
 	position:relative;
+	top: 15%;
 }
 .slider ul{
-	margin:0;
-	padding:0;
 	list-style:none;
 }
+
 .slider ul li{
 	width:100%;
-	height:90vh;
+	height:100%;
 	position:absolute;
-	top:0;
-	left:0;
 	animation-iteration-count:infinite;
 	animation-duration:24s;
 }
@@ -22,7 +20,7 @@
 .sliderimage{
 	width: 100%;
 	height: 100%;
-	border-radius: 10px;
+	border-radius: 5%;
 }
 
 .slider ul li:nth-child(1){
