--- a/css/darkmode.css
+++ b/css/darkmode.css
@@ -38,22 +38,20 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  height: 100%;
   background-color: var(--body);
 }
 
 label {
-  position: relative;
+  position: absolute;
   display: flex;
-  width: 10vh;
-  height: 20px;
-  bottom: 25px;
+  width: 90px;
+  height: 14px;
   border-radius: 30rem;
   overflow: hidden;
   cursor: pointer;
   border: solid;
-  border-radius: 10px;
+  border-radius: 20%;
+  top:25%;
 }
 
 label:after {
@@ -64,6 +62,7 @@ label:after {
   height: 100%;
   background-color: var(--switch);
   border-radius: 40%;
+  vertical-align: middle;
 
   /* Choose the result */
 
@@ -77,8 +76,8 @@ label:active::after {
 }
 
 input[type="checkbox"] {
-  width: 10%;
-  height: 5%;
+  width: 100%;
+  height: 100%;
   visibility: hidden;
 }
 
@@ -88,7 +87,8 @@ input[type="checkbox"]:checked + label:after {
 }
 
 .toggle-dark-mode {
-  width: 10%;
-  height: 5%;
+  width: 90px;
+  height: 100%;
+  position: relative;
 }
 
