--- a/css/style.css
+++ b/css/style.css
@@ -35,14 +35,13 @@ img {
   position: relative;
   top: 10%;
   bottom: 10%;
-  padding: 5% 10%;
-  background-color:#ffffff;
+  padding: 5% 5%;
 }
 
 .inner {
   /* max-width: 1340px; */
-  margin: 0 auto;
-  padding: 0 10%;
+  margin: 0 0;
+  padding: 0 5%;
 }
 
 /*--------------------------------
@@ -68,25 +67,26 @@ img {
 .header {
   position: fixed;
   top: 0;
+  left: 0;
   width: 100%;
   background-color:#f4f4f4;
   box-shadow: 0px 1px 0px #cbcbcb;
   z-index: 2;
-  padding:0% 1%;
+  padding:0% 10%;
 }
 
 .header-inner {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 2% 5%;
+  padding: 2% 0;
 }
 
 .header-logo {
   font-size: 20px;
   font-weight: bold;
-  line-height: 1.2;
-  margin-right: 10%;
+  line-height: 1;
+  margin-right: 5%;
   letter-spacing: 0.05em;
 }
 
@@ -96,7 +96,6 @@ img {
 
 .header-nav-list {
   display: flex;
-  justify-content: space-between;
   list-style: none;
 }
 
@@ -105,11 +104,11 @@ img {
 }
 
 .header-nav-item a {
-  font-size: 13px;
+  font-size: 14px;
   font-weight: bold;
-  padding: 5px 0;
   letter-spacing: 0.05em;
   color: #333;
+  vertical-align: middle;
 }
 
 .header-nav-item a:hover {
@@ -121,10 +120,10 @@ img {
 ---------------------------------*/
 .split {
   width: 100%;
-  height: 80vh;
+  height: 90vh;
   display: flex;
   flex-wrap: wrap;
-  padding: 0% 10%;
+  padding: 0 10%;
   justify-content: space-between;
   position: relative;
   top: 10%;
@@ -161,16 +160,20 @@ img {
 /*--------------------------------
  Works
 ---------------------------------*/
+.works{
+  width: 100%;
+  background-color: #ffffff;
+}
+
 .works-list {
   display: flex;
   flex-wrap: wrap;
   margin-bottom: -40px;
-  background-color:#ffffff;
 }
 
 .works-item {
-  width: 31.74603%;
-  margin-right: 1.58730%;
+  margin-right: auto;
+  margin-left: auto;
   margin-bottom: 40px;
   color: #333;
 }
@@ -180,32 +183,39 @@ img {
 }
 
 .works-item:nth-of-type(3n) {
-  margin-right: 0;
+  margin-right: auto;
 }
 
 .works-img img {
   border: 1px solid #e6e6e6;
+  width: 400px;
+  height: 300px;
 }
 
 .works-name {
-  font-size: 12px;
+  font-size: 16px;
   font-weight: bold;
   margin-top: 8px;
 }
 
 .works-info {
-  font-size: 10px;
+  font-size: 12px;
 }
 
 /*--------------------------------
  Skill
 ---------------------------------*/
+
+.skill{
+  width: 100%;
+  background-color: #ffffff;
+}
+
 .skill-list {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   margin-bottom: -50px;
-  background-color:#ffffff;
 }
 
 .skill-item {
@@ -233,6 +243,12 @@ img {
 /*--------------------------------
  Contact
 ---------------------------------*/
+
+.contact{
+  width: 100%;
+  background-color: #ffffff;
+}
+
 .contact-item:not(:last-child) {
   margin-right: 5%;
 }
@@ -291,7 +307,6 @@ img {
 }
 
 .article-body {
-  margin: 0 auto;
   margin-bottom: 10%;
 }
 
