--- a/css/style.css
+++ b/css/style.css
@@ -161,6 +161,7 @@ img {
 .works{
   width: 100%;
   background-color: #ffffff;
+  padding-top: 10%;
 }
 
 .works-list {
@@ -346,108 +347,4 @@ img {
 
 .home-link {
   text-align: center;
-}
-
-/*media Queries 767
-----------------------------------------------------*/
-@media screen and (max-width: 767px) {
-  body {
-    font-size: 13px;
-    line-height: 1.7;
-  }
-
-  .pc-only {
-    display: none;
-  }
-
-  .sp-only {
-    display: block;
-  }
-
-  /* 見出し */
-  .title {
-    font-size: 26px;
-  }
-
-  /* レイアウト */
-  .section {
-    padding: 20% 0;
-  }
-
-  .inner {
-    padding: 0 30%;
-  }
-
-  /* ヘッダー */
-  .header-inner {
-    padding: 2% 5%;
-  }
-
-  .header-logo {
-    font-size: 16px;
-  }
-
-  .header-nav-item:not(:last-child) {
-    margin-right: 5%;
-  }
-
-  .header-nav-item a {
-    font-size: 11px;
-  }
-
-  /* スプリットスクリーン */
-  .split {
-    flex-direction: column-reverse;
-  }
-
-  .split-body {
-    width: 100%;
-    padding-right: 3%;
-    padding-left: 8%;
-  }
-
-  .split-img {
-    width: 100%;
-    height: 80%;
-    margin-bottom: 10%;
-  }
-
-  .split-title {
-    font-size: 32px;
-  }
-
-  /* Works */
-  .works-name {
-    font-size: 10px;
-  }
-
-  .works-list {
-    justify-content: space-between;
-  }
-
-  .works-item {
-    flex: 0 0 48%;
-    margin-right: 10%;
-    margin-bottom: 10%;
-  }
-
-  /* Skill */
-  .skill-list {
-    display: block;
-    margin-bottom: 0;
-  }
-
-  .skill-item {
-    width: 100%;
-    margin-bottom: 10%;
-  }
-
-  .skill-item:last-child {
-    margin-bottom: 0;
-  }
-
-  /* フッター */
-  .footer {
-    padding: 5%;
-  }
 }
