--- a/css/slider.css
+++ b/css/slider.css
@@ -1,23 +1,25 @@
 .slider{
-	width: 80%;
-	height: 80%;
-	margin:0 auto;
+	width: 1280px;
+	height: 720px;
+	margin: 0 10%;
+	margin-top: 5%;
 	position:relative;
-	top: 15%;
+	
 }
+
 .slider ul{
 	list-style:none;
 }
 
 .slider ul li{
-	width:100%;
-	height:100%;
 	animation-iteration-count:infinite;
 	animation-duration:24s;
 	position:absolute;
 }
 
 .sliderimage{
+	top: 0;
+	left: 0;
 	width: 100%;
 	height: 100%;
 	border-radius: 5%;
