--- a/css/style.css
+++ b/css/style.css
@@ -32,8 +32,6 @@ img {
 ---------------------------------*/
 .section {
   position: relative;
-  top: 10%;
-  bottom: 10%;
   padding-bottom: 10%;
 }
 
@@ -71,22 +69,21 @@ img {
   background-color:#f4f4f4;
   box-shadow: 0px 1px 0px #cbcbcb;
   z-index: 2;
-  padding:0% 10%;
 }
 
 .header-inner {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 2% 0;
+  padding: 20px 30px;
 }
 
 .header-logo {
   font-size: 20px;
   font-weight: bold;
   line-height: 1;
+  margin-right: 20px;
   letter-spacing: 0.05em;
-  margin-right: 10%;
 }
 
 .header-logo a {
@@ -100,20 +97,19 @@ img {
 .header-nav-list {
   display: flex;
   list-style: none;
-  
-  width: 50%;
+  justify-content: space-between;
 }
 
 .header-nav-item:not(:last-child) {
-  margin-right: 5%;
+  margin-right: 20px;
 }
 
 .header-nav-item a {
   font-size: 14px;
   font-weight: bold;
+  padding: 5px 0;
   letter-spacing: 0.05em;
   color: #333;
-  vertical-align: middle;
 }
 
 .header-nav-item a:hover {
@@ -125,20 +121,18 @@ img {
 ---------------------------------*/
 .split {
   width: 100%;
-  height: 90vh;
   display: flex;
   flex-wrap: wrap;
-  padding: 0 10%;
   justify-content: space-between;
   position: relative;
-  top: 10%;
+  margin-top: 65px;
   background-color:#ffffff;
 }
 
 .split-body {
   width: 50%;
   top: 50%;
-  left: 10.5%;
+  left: 5%;
   background-color: rgb(242, 184, 97);
   position: absolute;
   border-radius: 10px;
